fix issue where logo would not show on IE11

--- a/sass/navigation/_header-and-footer.scss
+++ b/sass/navigation/_header-and-footer.scss
@@ -17,6 +17,14 @@
 			width: 24rem;
 		}
 	}
+
+	// support for IE
+	svg {
+		max-height: 100%;
+		max-width: 100%;
+		height: 66px;
+		width: 384px;
+	}
 }
 
 .site-header {
